syntax = "proto3";

package pb.indexer.nft;

option go_package = "/indexer/nft/pb";

message SatOffset {
    int64 sat = 1;
    int64 offset = 2;
}

message NftsInUtxo {
    repeated SatOffset sats = 1;
}

