syntax = "proto3";

package pb.runes;

option go_package = "/runes/pb";

// common
message Uint128 {
    uint64 lo = 1;
    uint64 hi = 2;
}

message Uint8 {
    uint32 value = 1;
}

message RuneId {
    uint64 block = 1;
    uint32 tx = 2;
}

message Rune {
    Uint128 value = 1;
}

message InscriptionId {
    string value = 1;
}

message SpacedRune {
	Rune   rune = 1;
	uint32 Spacers = 2;
}

message Symbol {
    int32 value = 1;
}

message Terms {
    Uint128 amount = 1;
    Uint128 cap = 2;
    uint64 start_height = 3;
    uint64 end_height = 4;
    uint64 start_offset = 5;
    uint64 end_offset = 6;
}

message RuneEntry {
    RuneId runeId = 1;
    uint64 number = 2;
    Uint8 divisibility = 3;
    string etching = 4;
    InscriptionId parent = 5;
    Uint128 mints = 6;
    uint64 holder_count = 7;
    Uint128 premine = 8;
    SpacedRune spaced_rune = 9;
    Symbol symbol = 10;
    Terms terms = 11;
    Uint128 burned = 12;
    uint64 timestamp = 13;
    bool turbo = 14;
}

message RunesStatus {
    string version = 1;
    uint64 height = 2;
    uint64 number = 3;
    uint64 reserved_runes = 4;
}

message Lot {
    Uint128 value = 1;   
}
message RuneIdLot {
    RuneId runeId = 1;
    Lot lot = 2;
}

message OutpointToBalancesValue {
    uint64 UtxoId = 1;
	uint64 AddressId = 3;
    repeated RuneIdLot rune_id_lots = 4;
}
message OutpointToBalances { OutpointToBalancesValue value = 1; }
message RuneIdToAddress {}
message RuneIdToOutpoint {}
message RuneIdToMintHistory {
    uint64 UtxoId = 1;
    Lot Amount = 2;
}
message AddressRuneIdToMintHistory {}
message RuneBalance {
    Lot Balance = 1;
}
message RuneAddressBalance {
    uint64 AddressId = 2;
    Lot Balance = 3;
}
message RuneIdAddressToBalance {
    uint64 AddressId = 1;
    Lot Balance = 2; 
}
message AddressOutpointToBalance {
    uint64 AddressId = 1;
    RuneId runeId = 2;
    Lot Balance = 3;
}

message RuneIdAddressToCount {
    uint64 Count = 1;
}